up ui inpection

--- a/Riskvalve/Views/Shared/_Layout.cshtml
+++ b/Riskvalve/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Riskvalve</title>
     <link rel="stylesheet" href="~/lib/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/lib/css/datepicker.css" />
     @* <link rel="stylesheet" href="~/lib/css/fontawesome.css" /> *@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Riskvalve.styles.css" asp-append-version="true" />
@@ -71,6 +72,8 @@
     </footer>
     <script src="~/lib/js/jquery.js"></script>
     <script src="~/lib/js/bootstrap.js"></script>
+    <script src="~/lib/js/datepicker.js"></script>
+    <script src="~/lib/js/bootbox.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
