--- a/Riskvalve/Views/Inspection/Index.cshtml
+++ b/Riskvalve/Views/Inspection/Index.cshtml
@@ -76,7 +76,7 @@
     </div>
     <div class="col-xs-9">
         <div>
-            <ul class="nav nav-tabs">
+            <ul class="nav nav-tabs nav-tab-menus">
                 <li class="active">
                     <a href="#welcome" data-toggle="tab">Welcome</a>
                 </li>
