--- a/Riskvalve/Views/Shared/_Layout.cshtml
+++ b/Riskvalve/Views/Shared/_Layout.cshtml
@@ -7,6 +7,10 @@
     <title>@ViewData["Title"] - Riskvalve</title>
     <link rel="stylesheet" href="~/lib/css/bootstrap.css" />
     <link rel="stylesheet" href="~/lib/css/datepicker.css" />
+    <link rel="stylesheet" href="~/lib/ext/datatables/dataTables.bootstrap.css">
+    </script>
+    <link rel="stylesheet" href="~/lib/ext/datatables/buttons/buttons.dataTables.min.css">
+    </script>
     @* <link rel="stylesheet" href="~/lib/css/fontawesome.css" /> *@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Riskvalve.styles.css" asp-append-version="true" />
@@ -78,6 +82,12 @@
     <script src="~/lib/js/bootstrap.js"></script>
     <script src="~/lib/js/datepicker.js"></script>
     <script src="~/lib/js/bootbox.js"></script>
+    <script src="~/lib/js/bootbox.js"></script>
+    <script src="~/lib/ext/datatables/jquery.dataTables.min.js"></script>
+    <script src="~/lib/ext/datatables/dataTables.bootstrap.min.js"></script>
+    <script src="~/lib/ext/datatables/buttons/dataTables.buttons.min.js"></script>
+    <script src="~/lib/ext/datatables/buttons/jszip.min.js"></script>
+    <script src="~/lib/ext/datatables/buttons/buttons.html5.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
