--- a/Riskvalve/Views/Shared/_Layout.cshtml
+++ b/Riskvalve/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
             </div>
         </nav>
     </header>
-    <div class="container-fluid">
+    <div class="container-fluid" style="padding: 0; margin:0;">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
