--- a/Riskvalve/Views/AssetRegister/Area.cshtml
+++ b/Riskvalve/Views/AssetRegister/Area.cshtml
@@ -4,29 +4,10 @@
 }
 
 <div class="row">
-    <div class="col-xs-3">
-        <aside class="main-sidebar">
-            <section class="sidebar" id="tree-menu">
-                <ul class="sidebar-menu">
-                    <li class="treeview">
-                        <a>Asset Register</a>
-                        <ul class="treeview-menu">
-                            <li class="treeview"><a asp-area="" asp-controller="AssetRegister"
-                                    asp-action="Area">Area</a>
-                            </li>
-                            <li class="treeview"><a asp-area="" asp-controller="AssetRegister"
-                                    asp-action="Platform">Platform</a>
-                            </li>
-                            <li class="treeview"><a asp-area="" asp-controller="AssetRegister"
-                                    asp-action="Asset">Asset</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </section>
-        </aside>
+    <div class="col-xs-3" style="padding-right:0;">
+        <partial name="Sidebar" />
     </div>
-    <div class="col-xs-9">
+    <div class="col-xs-7">
         <h3>Area</h3>
         <button type="button" class="btn btn-primary btn-area-action" attr-mode="create">
             Add New
@@ -37,7 +18,7 @@
                 <tr>
                     <th>No</th>
                     <th>Business Area</th>
-                    <th>Action</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -52,7 +33,8 @@
                                 <td>@ctr</td>
                                 <td>@item.BusinessArea</td>
                                 <td>
-                                    <button class="btn btn-primary btn-area-action" attr-mode="view" attr-itemid="@item.Id">Detail</button>
+                                    <button class="btn btn-primary btn-area-action" attr-mode="view"
+                                        attr-itemid="@item.Id">Detail</button>
                                 </td>
                             </tr>
                         }
@@ -72,8 +54,8 @@
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        <label class="control-label col-md-2">Business Area Name</label>
-                        <div class="col-md-2">
+                        <label class="control-label col-md-4">Business Area Name</label>
+                        <div class="col-md-6">
                             <input id="field-business-area-mode" type="hidden">
                             <input id="field-business-area-id" name="businessareaid" type="hidden">
                             <input id="field-business-area-name" name="businessareaname" class="form-control"
@@ -95,6 +77,7 @@
     <script>
         $(document).ready(function () {
             $('.btn-area-action').click(function () {
+                $('#field-business-area-name').val('');
                 var mode = $(this).attr('attr-mode');
                 if (mode == 'create') {
                     $('#field-business-area-mode').val('create');
@@ -118,25 +101,31 @@
             });
             $('#btn-area-modal-save').click(function () {
                 var mode = $('#field-business-area-mode').val();
-                if (mode == 'create') {
-                    $.ajax({
-                        url: '/AssetRegister/AddArea',
-                        type: 'POST',
-                        data: { businessArea: $('#field-business-area-name').val() },
-                        success: function (data) {
-                            location.reload();
-                        }
-                    });
-                } else if (mode == 'update') {
-                    var id = $('#field-business-area-id').val();
-                    $.ajax({
-                        url: '/AssetRegister/UpdateArea',
-                        type: 'POST',
-                        data: { id: id, businessArea: $('#field-business-area-name').val() },
-                        success: function (data) {
-                            location.reload();
-                        }
-                    });
+                var name = $('#field-business-area-name').val();
+                if (name == '') {
+                    alert('Business Area Name is required');
+                    return;
+                } else {
+                    if (mode == 'create') {
+                        $.ajax({
+                            url: '/AssetRegister/AddArea',
+                            type: 'POST',
+                            data: { businessArea: name },
+                            success: function (data) {
+                                location.reload();
+                            }
+                        });
+                    } else if (mode == 'update') {
+                        var id = $('#field-business-area-id').val();
+                        $.ajax({
+                            url: '/AssetRegister/UpdateArea',
+                            type: 'POST',
+                            data: { id: id, businessArea: name },
+                            success: function (data) {
+                                location.reload();
+                            }
+                        });
+                    }
                 }
             });
             $('#btn-area-modal-delete').click(function () {
