--- a/Riskvalve/Views/AssetRegister/Area.cshtml
+++ b/Riskvalve/Views/AssetRegister/Area.cshtml
@@ -48,19 +48,17 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <form>
+                <input id="field-business-area-mode" type="hidden">
+                <input id="field-business-area-id" name="businessareaid" type="hidden">
                 <div class="modal-header">
                     <h4 class="modal-title">Add/Edit New Area</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        <label class="control-label col-md-4">Business Area Name</label>
-                        <div class="col-md-6">
-                            <input id="field-business-area-mode" type="hidden">
-                            <input id="field-business-area-id" name="businessareaid" type="hidden">
-                            <input id="field-business-area-name" name="businessareaname" class="form-control"
-                                placeholder="Business Area Name" required>
-                        </div>
+                        <label for="field-business-area-name">Business Area Name</label>
+                        <input id="field-business-area-name" name="businessareaname" class="form-control"
+                            placeholder="Business Area Name" required>
                     </div>
                 </div>
                 <div class="modal-footer">
