--- a/Riskvalve/wwwroot/css/site.css
+++ b/Riskvalve/wwwroot/css/site.css
@@ -1,10 +1,24 @@
-﻿.modal-body {
+﻿html {
+	font-family: 'Arial';
+	font-weight: 400;
+	font-style: normal;
+	font-size: 13px;
+	letter-spacing: normal;
+}
+
+.modal-body {
   overflow-y: auto;
 }
 
+.modal-content,
 .form-control,
 .btn {
   border-radius: 0;
+}
+
+label,
+.form-group {
+  margin-bottom: 0;
 }
 
 /*
