--- a/Riskvalve/Views/AssetRegister/Asset.cshtml
+++ b/Riskvalve/Views/AssetRegister/Asset.cshtml
@@ -9,10 +9,10 @@
 }
 
 <div class="row">
-    <div class="col-xs-3" style="padding-right:0;">
+    <div class="col-xs-2" style="padding-right:0;">
         <partial name="Sidebar" />
     </div>
-    <div class="col-xs-7">
+    <div class="col-xs-10" style="padding-right: 50px">
         <h3>Asset</h3>
         <button type="button" class="btn btn-primary btn-asset-action" attr-mode="create">
             Add New
