--- a/Riskvalve/Views/Shared/_Layout.cshtml
+++ b/Riskvalve/Views/Shared/_Layout.cshtml
@@ -54,14 +54,14 @@
                                     <a asp-area="" asp-controller="Inspection" asp-action="Index">IMR</a>
                                 </li>
                                 <li>
-                                    <a asp-area="" asp-controller="Home" asp-action="Privacy">Assesment</a>
+                                    <a asp-area="" asp-controller="Assesment" asp-action="Index">Assesment</a>
                                 </li>
                                 <li class="dropdown">
                                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tool
                                         <span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a asp-area="" asp-controller="Tool" asp-action="Import">Import</a></li>
-                                        <li><a asp-area="" asp-controller="Tool" asp-action="Export">Export</a></li>
+                                        <li><a asp-area="" asp-controller="Tool" asp-action="ImportAssetRegister">Import Asset Register</a></li>
+                                        <li><a asp-area="" asp-controller="Tool" asp-action="ImportAssesment">Import Assesment</a></li>
                                     </ul>
                                 </li>
                                 <li>
